[gd_scene load_steps=4 format=3 uid="uid://bcnjxvo8davm"]

[ext_resource type="Script" path="res://GUI/Scripts/menu.gd" id="1_y0wxo"]

[sub_resource type="Gradient" id="Gradient_gesl8"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_htair"]
gradient = SubResource("Gradient_gesl8")

[node name="Menu" type="Control"]
process_mode = 3
z_index = 10
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_y0wxo")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1254.0
offset_top = -826.0
offset_right = 1321.0
offset_bottom = 669.0
texture = SubResource("GradientTexture1D_htair")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -60.0
offset_right = 183.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Пауза"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Продолжить"

[node name="Save" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Сохранить
"

[node name="Load" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Загрузить"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Выход"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
